infrastructure/kubernetes/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parchment-app
spec:
  selector:
    matchLabels:
      tier: app
  replicas: 1
  template:
    metadata:
      labels:
        tier: app
    spec:
      containers:
        - name: parchment-app
          imagePullPolicy: "Always"
          image: depends-on-environment
          ports:
            - containerPort: 80
