infrastructure/kubernetes/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parchment-app
  labels:
    tier: app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    tier: app
