infrastructure/kubernetes/application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parchment-app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - app.parchment.todoninja.de
      secretName: letsencrypt-prod
  rules:
    - host: app.parchment.todoninja.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parchment-app
                port:
                  number: 80
